src/test/deca/context/valid/custom/print-int.deca
// Description:
//   somme de deux valeurs de types differents
//
// Resultats:
//    Ligne 12: somme de deux valeurs de types differents.
//
// Historique:
//    cree le 01/01/2022

{
   // Doit etre compile.
   print(1);
}
