src/test/deca/context/invalid/custom/incompatible-mult-v1.deca
// Description:
//   multiplication de deux valeurs de types differents
//
// Resultats:
//    Ligne 12: multiplication de deux valeurs de types differents.
//
// Historique:
//    cree le 01/01/2022

{
   // Doit etre refuse.
   1*2.3f;
}
